--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
@@ -22,7 +22,14 @@
             }
             /*navbar*/
             .navbar{
-                width:100%;
+                font-family: "Poppins",sans-serif;
+                color: white;
+                background-color: #2c3d4f;
+            }
+            /*links in collapsible div*/
+            .nav-link{
+                color: white;
+                padding-left: 5px;
             }
             /*buttons in navbar*/
             .navbtn{
@@ -32,21 +39,15 @@
                 padding-right: 20px;
                 border-radius: 0px;
             }
-            /*nav buttons focus property*/
-            .navbtn:focus{
-                box-shadow: none;
-            }
-            /*nav button hover property*/
-            .navbtn:hover{
-                color: white;
-                background-color:rgba(227, 224, 224,.4);
+            /*Collapsible div*/
+            #collapsibleNavbar{
+                background-color: #394d63;
             }
             /*div that contains front page elements*/
             .content{
                 color: white;
                 margin-left: 5%;
                 margin-right: 5%;
-                margin-top: 5%;
             }
             /*div containing title and icon*/
             .titleicon{
@@ -83,6 +84,9 @@
             .apply:focus{
                 box-shadow: 0px 0px 5px 2px rgba(0,0,0,.5);;
             }
+            .apply:hover{
+                background-color: rgba(227, 224, 224,.2);
+            }
             /*div containing application button*/
             .btnapp{
                 display: flex;
@@ -92,32 +96,37 @@
         </style>
     </head>
     <body>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+        <!--Navbar-->
+        <nav class="navbar navbar-dark fixed-top">
+            <div class="container-fluid">
+                <!--Navbar toggle button-->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <!--Student Branch logo-->
+                <div class="navbar-brand">
+                    <img src="Stubrlogo.jpg" alt="IEEE Student Branch" style="padding-left:10px;height:50px;width:60px">
+                </div>
+                <!--Hackathon logo-->
+                <div class="navbar-brand ms-auto">
+                    <img src="hacklogo.jpg" alt="Hackathon" style="height:50px;width:50px">
+                </div>
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#themes">Themes</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about_us">About Us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#prizes">Prizes</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#timeline">Timer</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#sponsor">Sponsors</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
         <!--front page div-->
         <div id="home" class="frontpage">
-            <!--navbar-->
-            <nav class="navbar">
-                <!--div containing buttons and logos-->
-                <div class="container-fluid">
-                    <!--IEEE Student Branch logo-->
-                    <div class="me-auto" style="max-width:10%">
-                        <img src="Stubrlogo.jpg" alt="IEEE Student Branch" style="height:100%;width:100%;">
-                    </div>
-                    <!--div containing nav buttons-->
-                    <div class="mx-auto" style="max-width:80%;">
-                        <button type="button" class="btn navbtn" onclick="window.location.href='#home';">Home</button>
-                        <button type="button" class="btn navbtn" onclick="window.location.href='#themes';">Themes</button>
-                        <button type="button" class="btn navbtn" onclick="window.location.href='#about_us';">About Us</button>
-                        <button type="button" class="btn navbtn" onclick="window.location.href='#prizes';">Prizes</button>
-                        <button type="button" class="btn navbtn" onclick="window.location.href='#timeline';">Timer</button>
-                        <button type="button" class="btn navbtn" onclick="window.location.href='#sponsor';">Sponsors</button>
-                    </div>
-                    <!--Hackathon logo-->
-                    <div class="ms-auto" style="max-width:10%">
-                        <img src="hacklogo.jpg" alt="Hackathon" style="height:100%;width:100%;">
-                    </div>
-                </div>
-            </nav>
+            <div style="width:100%;height:150px;"></div>
             <!--div containing front page elements-->
             <div class="content">
                 <!--flexbox to center title and icon-->
