--- a/index.html
+++ b/index.html
@@ -31,14 +31,6 @@
                 color: white;
                 padding-left: 5px;
             }
-            /*buttons in navbar*/
-            .navbtn{
-                font-size: 80%;
-                color: white;
-                padding-left: 20px;
-                padding-right: 20px;
-                border-radius: 0px;
-            }
             /*Collapsible div*/
             #collapsibleNavbar{
                 background-color: #394d63;
@@ -75,6 +67,8 @@
                 font-size: 125%;
                 padding-left: 60px;
                 padding-right: 60px;
+                padding-top: 10px;
+                padding-bottom: 10px;
                 border-radius: 50px;
                 box-shadow: 0px 0px 5px 2px rgba(0,0,0,.5);
                 margin: 5%;
@@ -151,7 +145,7 @@
                 <!--div containing application button-->
                 <div class="btnapp">
                     <!--application button-->
-                    <button class="btn apply">APPLY NOW</button>
+                    <button class="button apply">APPLY NOW</button>
                 </div>
             </div>
         </div>
