--- a/index.html
+++ b/index.html
@@ -70,16 +70,18 @@
                 padding-top: 10px;
                 padding-bottom: 10px;
                 border-radius: 50px;
+                border: 1px rgba(227, 224, 224,.4);
                 box-shadow: 0px 0px 5px 2px rgba(0,0,0,.5);
                 margin: 5%;
                 background-color: rgba(227, 224, 224,.4);
             }
             /*apply button focus property*/
             .apply:focus{
-                box-shadow: 0px 0px 5px 2px rgba(0,0,0,.5);;
+                box-shadow: 0px 0px 5px 2px rgba(0,0,0,.5);
             }
             .apply:hover{
                 background-color: rgba(227, 224, 224,.2);
+                border: 1px rgba(227, 224, 224,.2);
             }
             /*div containing application button*/
             .btnapp{
