--- a/index.html
+++ b/index.html
@@ -29,11 +29,8 @@
             /*links in collapsible div*/
             .nav-link{
                 color: white;
+                font-size: 80%;
                 padding-left: 5px;
-            }
-            /*Collapsible div*/
-            #collapsibleNavbar{
-                background-color: #394d63;
             }
             /*div that contains front page elements*/
             .content{
@@ -94,7 +91,7 @@
     <body>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <!--Navbar-->
-        <nav class="navbar navbar-dark fixed-top">
+        <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
             <div class="container-fluid">
                 <!--Navbar toggle button-->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
@@ -104,11 +101,7 @@
                 <div class="navbar-brand">
                     <img src="Stubrlogo.jpg" alt="IEEE Student Branch" style="padding-left:10px;height:50px;width:60px">
                 </div>
-                <!--Hackathon logo-->
-                <div class="navbar-brand ms-auto">
-                    <img src="hacklogo.jpg" alt="Hackathon" style="height:50px;width:50px">
-                </div>
-                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <div class="collapse navbar-collapse mx-auto" style="width:100%">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#themes">Themes</a></li>
@@ -118,6 +111,20 @@
                         <li class="nav-item"><a class="nav-link" href="#sponsor">Sponsors</a></li>
                     </ul>
                 </div>
+                <!--Hackathon logo-->
+                <div class="navbar-brand ms-auto">
+                    <img src="hacklogo.jpg" alt="Hackathon" style="height:50px;width:50px">
+                </div>
+            </div>
+            <div class="collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#themes">Themes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about_us">About Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#prizes">Prizes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#timeline">Timer</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#sponsor">Sponsors</a></li>
+                </ul>
             </div>
         </nav>
         <!--front page div-->
